frontend/src/styles/SplashVertical.module.css
/* Splash */
@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Josefin+Sans&display=swap');

.splash {
	font-family: 'Josefin Sans', Georgia, Times, serif;
	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
		url("../static_resources/homephoto.jpg"); /** https://stackoverflow.com/questions/8195215/css-background-image-on-background-color **/
	height: calc(80vh + 100px);  /*+64px*/
	background-size: cover;
	background-position-x: 70%;
	background-position-y: 10%;
	/* margin-top: 10vh; */
	/* background-color: red; */
	padding-top: 30px;
	padding-bottom: 30px;
	margin-top: -64px;
}

.splashContent {
	display: flex;
	justify-content: space-between;
	flex-direction: column;
	align-items: center;
	margin: 64px auto 0;
	width: 90%;
	max-width: 1200px;
}

.headerText {
	text-align: center;
	width: 90%;
	margin: auto;
	flex: 1;
}

.title {
	text-shadow:1px 0px 2px rgb(70, 63, 63);
	margin: 8px auto;
	line-height: 125%;
	text-align: center;
	color: #f8f8f8 !important;
}

.about {
	/* text-shadow: 2px 2px 1px #000000; */
	text-shadow:1px 0px 2px rgb(70, 63, 63);
	font-size: 1.5em;
	text-align: center;
	color: #f8f8f8 !important;
	/* color: #e0e0e0 !important; */
}

.searchSelectButtons {
	display: flex;
	flex-direction: row;
}

.searchSelectButton {
	margin-left: 8px;
	margin-right: 8px;
}

.downButton {
	margin: 16px auto 0;
	text-align: center;
	color: #e0e0e0;
}

.downButtonIcon {
	color: #e0e0e0;
	font-size: 48px;
	transform: translateY(0);
	transition: transform 0.5s ease, color 0.25s ease;
}

.downButtonIcon:hover {
	transform: translateY(8px);
	color: #40a9ff;
	cursor: pointer;
}

.downButtonIcon:active {
	transform: translateY(12px);
}

.descriptionContainer {
	width: 95%;
	max-width: 800px;
	margin: 32px auto;
}

.searchBarContainer,
.modelCards {
	width: 95%;
	max-width: 1200px;
	margin: 16px auto;
	text-align: center;
}

.cardFlexContainer {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	flex-direction: column;
	width: 100%;
}

.card {
	margin: 16px auto !important;
	width: 95%;
	max-width: 320px;
	display: flex;
	flex-direction: column;
	align-items: center;
	flex-grow: 1;
	/* text-align: center; */
}

.cardImage {
	/* margin: 25px 0; */
	object-fit: contain;
}

/* News */

.news {
	width: 90%;
	margin: 16px auto;
	display: grid;
	grid-template-rows: repeat(auto-fit, minmax(300px, auto));
	grid-template-columns: repeat(1, minmax(240px, 1fr));
	gap: 16px;
}

.newsCard {
	width: 100%;
	height: 100%;
}

.newsCardImage {
	width: 100%;
	height: 200px;
	object-fit: cover;
	background-color: "#c8c8c8";
}

@media (min-width: 768px) {
	.cardFlexContainer {
		flex-direction: row;
	}

	.card {
		margin: 16px 24px !important;
	}

	.splashContent {
		margin-top: 10vh;
		align-items: center;
		justify-content: center;
	}

	.headerText {
		text-align: left;
		max-width: 600px;
	}

	.title {
		font-size: 4.5em !important;
		margin: 32px auto;
	}

	.news {
		grid-template-columns: repeat(2, minmax(240px, 1fr));
	}

	.newsCardImage {
		height: 300px;
	}
}


h3 {
    font-size: 50px;
    text-align: center;
}

.image{
    height: 50px;
    width: 50px;
}
.arrow{
    margin-top:150px;
    margin-bottom:0;
	-webkit-filter: invert(100%);   
	-webkit-filter: drop-shadow();  
}

.body {
    /* background-color:bisque; */
    min-height: 50vh;
    font-size:24px;
    text-align: center;
	width: 100%;
}

.purpose {
	text-shadow:1px 0px 2px rgb(70, 63, 63);
    font-size: 20px;
    color: #FFFFFF;
    padding-right: 10vw;
    padding-left: 10vw;
    text-align:center;
    padding-bottom: 5vh;
    /* font-family: 'Raleway'; */

}

.purpose-header{
    padding-bottom: 5vh;
      
}



.top_text{
    color:white;
    margin-right: 100px;
    margin-left: 200px;
}
.top_picture{
    margin-left: 100px;
    margin-right: 200px;
}

.college_image {
    padding-right: 100rem;
    margin-right: 200rem;
}

  

